--- a/app/src/App.css
+++ b/app/src/App.css
@@ -38,15 +38,20 @@
   margin-right: 10px;
 }
 
+#to{
+  margin-left: 10px; 
+  margin-right: 10px;
+}
+
 .select-css {
   display: block;
   font-size: calc(10px + 2vmin);
   color: white;
   line-height: 1;
-  padding: 10px;
+  padding: 5px 30px 5px 7px;
   box-sizing: border-box;
   margin: 0;
-  border: 0.5px solid white;
+  border: 0.5px solid #282c34;
   box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
   border-radius: .5em;
   -moz-appearance: none;
@@ -74,10 +79,6 @@
 }
 .select-css option {
   font-weight:normal;
-}
-
-.Strelka {
-  padding-top: 6px ;
 }
 
 .ClockSize {
